# pixsim

./: CMakeLists.txt  README.md  bempp_setup.sh  box_tpc.geo  boxtpc.cfg  cylindricaltpc.cfg  for_gmsh.py  pixels.cfg  pixeltpc_pixels_at_0.5.geo  pixeltpc_pixels_at_0.5.msh  setup.py
README/: DRIFT_SIM.md  INSTALL.md
amselsim/: CMakeLists.txt
amselsim/Analyzers/: AmSelAnaTree_module.cc  CMakeLists.txt  ViewSignal_module.cc  amselsim_anamodules.fcl
amselsim/DetectorSim/: CMakeLists.txt  PhotonProjection_module.cc  SimQPix_module.cc  amselsim_detsimmodules.fcl
amselsim/Generator/: CMakeLists.txt  prodsingle_muon_500_1000MeV.fcl
amselsim/Geometry/: AmSelGeometry.cxx  AmSelGeometry.h  AmSelGeometryService.h  CMakeLists.txt
amselsim/Geometry/gdml/: amsel_nopixels.gdml  amsel_simple.gdml
amselsim/LArG4/: AmSelG4Ana_module.cc  AmSelG4_module.cc  AuxDetReadout.h  AuxDetReadoutGeometry.cxx  CustomPhysicsTable.hh  G4BadIdeaAction.cxx  G4BadIdeaAction.h  ISCalculationNEST.h  ISCalculationSeparate.cxx  ISCalculationSeparate.h  IonizationAndScintillationAction.cxx  LArVoxelReadout.cxx  LArVoxelReadoutGeometry.cxx  MaterialPropertyLoader.cxx  MaterialPropertyLoader.h  (+18 more)
boxtpc3/: boxtpc.cfg  redefine_surface.py  save.sh  temp.txt
cfg_templates/: cylindricaltpc.cfg
cylindrical_tpc_100pixels/: cylindricaltpc_100pixels.geo
drift_sim/: boxtpc.cfg  single_histo_muon.root
geometries/: pixeltpc_10x10x2_at_0.5.geo  pixeltpc_10x10x2_at_0.5.msh  pixeltpc_4x4x2_at_0.5.geo  pixeltpc_4x4x2_at_0.5.msh  pixeltpc_pixels_at_0.5.geo
pixsim/: CMakeLists.txt
ups/: product_deps
(+243 files in other folders)
